app/assets/stylesheets/shared/pure-overrides.css.scss
@import 'constants';
@import 'utilities';

.subnav {
  @include transition();

  padding-top: 70px;
  z-index: 1003;
  left: $nav-width-desktops;
  background: #212020;

  .pure-menu ul {
    // Hack to get menu elements to line up correctly with .nav
    border-top: 1px solid rgba(0, 0, 0, 0);
  }

  &.active {
    left: 2*$nav-width-desktops;
  }

  @include respond-to(handhelds) {
    left: 0;
    &.nav-active {
      left: $nav-width-handhelds;
    }
    &.active {
      left: 2*$nav-width-handhelds;
    }
  }
  @include respond-to(tablets) {
    left: 0;
    &.nav-active {
      left: $nav-width-tablets;
    }
    &.active {
      left: 2*$nav-width-tablets;
    }
  }
}

.nav {
  @include transition();

  padding-top: $body-margin;
  z-index: 1004;
  left: $nav-width-desktops;
  background: #191818;

  .pure-menu ul {
    border-top: 1px solid #333;
  }

  @include respond-to(handhelds) {
    left: 0;
    &.active {
      left: $nav-width-handhelds;
    }
  }
  @include respond-to(tablets) {
    left: 0;
    &.active {
      left: $nav-width-tablets;
    }
  }
}

.nav, .subnav {
  margin-left: -$nav-width-desktops;
  width: $nav-width-desktops;

  @include respond-to(handhelds) { width: $nav-width-handhelds; margin-left: -$nav-width-handhelds; }
  @include respond-to(tablets) { width: $nav-width-tablets; margin-left: -$nav-width-tablets; }
  @include respond-to(desktops) { width: $nav-width-desktops; margin-left: -$nav-width-desktops }

  position: fixed;
  top: 0;
  bottom: 0;
  overflow-y: auto;
  -webkit-overflow-scroll: touch;

  .pure-menu {
    ul {
      li {
        font-size: 100%;
        @include respond-to(tablets) { font-size: 125%; }

        a:hover {
          background-color: #333;
        }

        &.menu-item-divided {
          border-top: 1px solid #333;
        }

        &.pure-menu-selected, &.pure-menu-selected a:hover {
          background: #1f8dd6;
          a {
            color: #fff;
          }
        }

        i {
          float: right;
          margin-right: 0.6em;
          line-height: inherit;
        }
      }
    }
  }

  .pure-menu-open {
    background: transparent;
    border: 0;

    .pure-menu-heading {
      font-size: 125%;
      @include respond-to(tablets) { font-size: 140%; }

      color: #fff;
      text-transform: none;
      padding: 0 0 0 0.43em;
      margin: 0;
      line-height: 50px;
      height: 50px;
    }
      color: #999;

    a {
      border: none;
      white-space: normal;
      padding: 0.6em 0 0.6em 0.6em;
    }
  }
}

.pure-form-aligned .pure-control-group {
  $label-width: 10em;
  $label-width-lowres: 6em;
  $label-margin: 1em;
  $dropdown-width: 10em;
  // XXX: Where does this come from? Oh well.
  $label-comfort-margin: 1em;
  $dropdown-comfort-margin: 0.6em;
  // TODO: This is bad and we should look into it.
  $dropdown-comfort-antimargin-lowres: 0.2em;

  label {
    @include respond-to(tablets) { width: $label-width-lowres; margin: 0 $label-margin 0 0; }
  }

  input[type="text"], input[type="email"], input[type="password"] {
    width: 350px;
    @include calc(width, "100% - #{$label-width + 2*$label-margin + $label-comfort-margin}");
    @include respond-to(tablets) { @include calc(width, "100% - #{$label-width-lowres + 2*$label-margin + $label-comfort-margin}"); }
    @include respond-to(handhelds) { width: 100%; }
  }

  // Text areas do not get formatted by pure, the styling below is
  // obtained from the styling pure uses for text inputs.
  textarea {
    border: 1px solid #ccc;
    font-size: 0.8em;
    box-shadow: inset 0 1px 3px #ddd;
    border-radius: 4px;
    -webkit-transition: .3s linear border;
    transition: .3s linear border;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    resize:none;

    // Custom styles.
    $textarea-padding: 0.5em;
    padding: $textarea-padding;
    @include calc(width, "100% - #{$label-width + 2*$label-margin + $label-comfort-margin + 2*$textarea-padding}");
    @include respond-to(tablets) { @include calc(width, "100% - #{$label-width-lowres + 2*$label-margin + $label-comfort-margin + 2*$textarea-padding}"); }
    @include respond-to(handhelds) { @include calc(width, "100% - #{2*$textarea-padding}"); }
  }

  .dropdown-list {
    width: $dropdown-width;
    margin: 4.5px 0;
  }

  .dropdown-field {
    display: inline-block;
    width: 350px;
    @include calc(width, "100% - #{$label-width + $label-comfort-margin - $dropdown-comfort-margin}");
    @include respond-to(tablets) { @include calc(width, "100% - #{$label-width-lowres + $label-comfort-margin + $dropdown-comfort-antimargin-lowres}"); }
    @include respond-to(handhelds) { width: 100%; }

    .other-field {
      display: inline-block;
      margin-left: $label-comfort-margin;
      @include calc(width, "100% - #{$dropdown-width + $label-comfort-margin}");
    }
  }

  .checkbox-field {
    display: inline-block;
    margin: 0px 4px;

    .checkbox-label {
      display: inline-block;
      margin: 0px 2px 0px 4px;
    }
  }
}

body {
  .pure-button-xsmall {
    font-size: 70%;
  }

  .pure-button-small {
    font-size: 85%;
  }

  .pure-button-large {
    font-size: 110%;
  }

  .pure-button-xlarge {
    font-size: 125%;
  }

  .pure-button-2x {
    font-size: 200%;
  }

  .pure-button-fixed-width {
    width: 300px;
  }

  .pure-button-success,
  .pure-button-error,
  .pure-button-warning,
  .pure-button-secondary {
      color: white;
      border-radius: 4px;
      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
  }

  .pure-button-success {
      background: rgb(76, 201, 71); /* this is a green */
  }

  .pure-button-error {
      background: rgb(202, 60, 60); /* this is a maroon */
  }

  .pure-button-warning {
      background: orange;
  }

  .pure-button-secondary {
      background: rgb(95, 198, 218); /* this is a light blue */
  }

  h3 {
    @include respond-to(handhelds) {
      margin-bottom: 0.7em;
    }
  }
}

.pure-table-full-width {
  width: 100%;
}

